--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "mathjax-full": "^3.2.2",
     "mathjax-react": "^2.0.1",
     "react": "^18.2.0",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
