--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^3.4.1",
     "jquery": "^3.6.0",
     "mathjax-full": "^3.2.2",
     "mathjax-react": "^2.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
